save_to_sql.py handles sending to sql database

--- a/misc/Test SQL Connection.ipynb
+++ b/misc/Test SQL Connection.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -65,16 +65,22 @@
     "    \n",
     "    conn = pymysql.connect(host='127.0.0.1', user=sql_username,\n",
     "        passwd=sql_password, db=sql_main_database,\n",
-    "        port=tunnel.local_bind_port)\n",
-    "    #insert_query = \"INSERT INTO weatherdata VALUES({},{},{},{},{});\".format(date, temperature1, temperature2, pressure, humidity)\n",
+    "        port=tunnel.local_bind_port, autocommit=True)\n",
+    "    #sample read query\n",
     "    query = \"SELECT temperature1 from weatherdata;\"\n",
     "    data = pd.read_sql_query(query, conn)\n",
+    "    \n",
+    "    #sample insert into database\n",
+    "    insert_command = \"INSERT INTO weatherdata VALUES({},{},{},{},{});\".format(date, temperature1, \\\n",
+    "                                                                    temperature2, pressure, humidity)\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(insert_command)\n",
     "    conn.close() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -108,22 +114,49 @@
        "      <th>0</th>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "   temperature1\n",
-       "0           1.0"
+       "0           1.0\n",
+       "1          75.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'INSERT INTO weatherdata VALUES(%s,%f,%f,%f,%f);'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "insert_command"
    ]
   },
   {
