added TODO documentation messages for reading the password from local files

--- a/misc/Test SQL Connection.ipynb
+++ b/misc/Test SQL Connection.ipynb
@@ -1,17 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "\"\"\"This notebook requires paramiko, sshtunnel, and pymysql\"\"\"\n",
+    "This notebook requires paramiko, sshtunnel, and pymysql\n",
+    "\n",
+    "\n",
     "\"pip install paramiko\"\n",
     "\"pip install sshtunnel\"\n",
-    "\"pip install pymysql\""
+    "\"pip install pymysql\"\n",
+    "\n",
+    "Paramiko is optional and is only necessary if you want to read from the RSA private key file to get ssh access."
    ]
   },
   {
@@ -28,7 +28,6 @@
     "import time\n",
     "import paramiko\n",
     "import pandas as pd\n",
-    "from paramiko import SSHClient\n",
     "from sshtunnel import SSHTunnelForwarder\n",
     "import pymysql"
    ]
@@ -50,6 +49,7 @@
     "ssh_host = 'ssh.ocf.berkeley.edu'\n",
     "ssh_user = 'ankurmahesh'\n",
     "ssh_port = 22\n",
+    "#mypkey = paramiko.RSAKey.from_private_key_file(pkeyfilepath)\n",
     "\n",
     "date = \"01-01-01\"\n",
     "temperature1 = 75.0\n",
@@ -61,6 +61,7 @@
     "    (ssh_host, ssh_port),\n",
     "    ssh_username=ssh_user,\n",
     "    ssh_password=\"2easy4me\",\n",
+    "    #ssh_pkey=mypkey,\n",
     "    remote_bind_address=(sql_hostname, sql_port)) as tunnel:\n",
     "    \n",
     "    conn = pymysql.connect(host='127.0.0.1', user=sql_username,\n",
