remove hardcoded passwords and instead read from local files

--- a/misc/Test SQL Connection.ipynb
+++ b/misc/Test SQL Connection.ipynb
@@ -43,7 +43,12 @@
     "\"\"\"Connect to the MYSQL database hosted on OCF's server and run queries!\"\"\"\n",
     "sql_hostname = 'mysql'\n",
     "sql_username = 'ankurmahesh'\n",
-    "sql_password = 'b1C4ZcoJR8lTXMm3EocB46ek'\n",
+    "with open(\"sql_password\") as f:\n",
+    "    sql_password = f.read()\n",
+    "\n",
+    "with open(\"ssh_password\") as f:\n",
+    "    ssh_password = f.read()\n",
+    "\n",
     "sql_main_database = 'ankurmahesh'\n",
     "sql_port = 3306\n",
     "ssh_host = 'ssh.ocf.berkeley.edu'\n",
@@ -60,7 +65,7 @@
     "with SSHTunnelForwarder(\n",
     "    (ssh_host, ssh_port),\n",
     "    ssh_username=ssh_user,\n",
-    "    ssh_password=\"2easy4me\",\n",
+    "    ssh_password=ssh_password,\n",
     "    #ssh_pkey=mypkey,\n",
     "    remote_bind_address=(sql_hostname, sql_port)) as tunnel:\n",
     "    \n",
